# Mars-rover-architecture-with-ROS

./: README.md  gnss_log.txt
install/: local_setup.sh  setup.sh
install/urc_missions_interfaces/share/urc_missions_interfaces/: package.bash  package.zsh
log/: latest_build
src/urc_missions_interfaces/: package.xml
src/urc_missions_interfaces/action/urc_missions/: package.xml  setup.cfg  setup.py
src/urc_missions_interfaces/action/urc_missions/action/: DeliverItem.action
src/urc_missions_interfaces/action/urc_missions/launch/: urc.launch.py
src/urc_missions_interfaces/action/urc_missions/urc_missions/: coordinator_node.py  delivery_action_client.py  science_node.py  vision_node.py
